app/assets/stylesheets/form.css.scss
#error_explanation {
  color: red;
  padding-left: 0px;
}

.alert {
  padding: 8px;
}

.form-horizontal {
  padding-top: 10px;
}

.form-group {
  margin-bottom: 25px;
}

textarea.form-control {
  height: 120px;
}

.modal-dialog {
  width: 75%;
}

.loader {
  background: url("loader.gif") no-repeat;
  background-size: contain;
  padding-left: 28px;
}

.alert {
  display: none;
}

.errors {
  color: #a94442;
  padding-left: 5px;
  padding-top: 5px;
}

#search_button {
  outline: none;
}

#book_image {
  height: 250px;
  width: 80%;
  margin-left: 11%;
  overflow: hidden;
}

#borrower_info_modal {
  .form-group {
    margin-bottom: 0;
  }
  .input-group {
    width: 100%;
    .input-group-addon {
      padding: 7px;
    }
  }
}

